# ts_bench

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  eval_forecasting.toml  eval_generation.toml  flow.drawio  pyproject.toml  scenario.toml
.github/workflows/: pre-merge.yaml  publish.yml
data/: task_bank.py  tasks.json  tasks.yaml
data/commodity_forecasting/: commodity_forecasting.json  task.txt
data/commodity_generation/: commodity_generation.json  task.txt
data/crypto_generation/: crypto_generation.json  eval_fn.py  task.txt
data/equity_forecasting/: equity_forecasting.json  task.txt
data/equity_generation/: equity_generation.json  task.txt
data/fx_forecasting/: fx_forecasting.json  task.txt
data/tasks/: tasks.json
data/tasks/commodity_forecasting/: task.txt
data/tasks/commodity_generation/: task.txt
data/tasks/crypto_forecasting/: task.txt
data/tasks/crypto_generation/: eval_fn.py  task.txt
data/tasks/equity_forecasting/: task.txt
data/tasks/equity_generation/: task.txt
data/tasks/fx_forecasting/: eval_fn.py  task.txt
data/tasks/regime_switching_forecasting/: task.txt
data/tasks/regime_switching_generation/: task.txt
dockerfiles/: Dockerfile.deterministic  Dockerfile.green  Dockerfile.purple
src/ts_bench/: __main__.py  agent_card.py  client.py  client_cli.py  executor.py  experiment_types.py  green_agent.py  run_scenario.py  task_bank.py  tool_provider.py  types.py
src/ts_bench/agents/: agent_card.py  base_agent.py  benchmark_agent.py  deterministic_agent.py  task_bank.py  template.py  ts_task_agent.py
src/ts_bench/agents/ts_task_agent/: agent.py  eval_fn_combined.py  eval_forecasting.py  eval_generation.py  evaluation.py  task.py  utils.py
tests/: conftest.py  test_torch_to_numpy_consistency.py
