[project]
name = "ts-bench"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "ts_bench", from = "src"}]
requires-python = ">=3.11,<3.14"
dependencies = [
    "a2a-sdk[http-server] (>=0.3.19,<0.4.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tomli (>=2.3.0,<3.0.0)",
    "google-adk[a2a] (>=1.20.0,<2.0.0)",
    "psutil (>=7.2.1,<8.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.0"
pytest = "^9.0.2"

[tool.poetry.group.benchmark.dependencies]
openai = "^2.13.0"
scikit-learn = "^1.8.0"
pandas = "^2.3.3"

[tool.poetry.group.benchmark]
optional = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
